dnl Process this file with autoconf to produce a configure script
AC_INIT(src/main.c)
AM_INIT_AUTOMAKE(peacock, 1.9.1)

AC_PROG_INTLTOOL

AM_MAINTAINER_MODE

dnl Some standard checks.
AC_PROG_CC
AC_ISC_POSIX
AC_HEADER_STDC
AC_ARG_PROGRAM

dnl Translation support
ALL_LINGUAS=""

GETTEXT_PACKAGE=peacock-2
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE, "$GETTEXT_PACKAGE", "definition of GETTEXT_PKG")
AM_GLIB_GNU_GETTEXT

GNOME_COMPILE_WARNINGS(yes)
AC_SUBST(CFLAGS)
AC_SUBST(CPPFLAGS)
AC_SUBST(LDFLAGS)

dnl Version requirements of Gtk+/Gnome related dependencies of peacock.
LIBGNOMEUI_REQUIRED=2.2.0
LIBBONOBOUI_REQUIRED=2.2.0
LIBGLADE_REQUIRED=2.0.1
GTKSOURCEVIEW_REQUIRED=0.5.0

PEACOCK_GNOME_DEPENDENCIES="libgnomeui-2.0 >= $LIBGNOMEUI_REQUIRED libbonoboui-2.0 >= $LIBBONOBOUI_REQUIRED libglade-2.0 >= $LIBGLADE_REQUIRED gtksourceview-1.0 >= $GTKSOURCEVIEW_REQUIRED"

dnl Check and set CFLAGS & LIBS accordingly.
PKG_CHECK_MODULES(PEACOCK_GNOME_DEPENDENCIES, $PEACOCK_GNOME_DEPENDENCIES)
AC_SUBST(PEACOCK_GNOME_DEPENDENCIES_CFLAGS)
AC_SUBST(PEACOCK_GNOME_DEPENDENCIES_LIBS)

dnl Check for glib-genmarshal
AC_PATH_PROG(GLIB_GENMARSHAL, glib-genmarshal)

AC_OUTPUT([
Makefile
icons/Makefile
src/Makefile
src/dialogs/Makefile
src/file/Makefile
src/file/dialogs/Makefile
])
