EXTRA_DIST = \
	h1.xpm h2.xpm h3.xpm \
	h4.xpm h5.xpm h6.xpm \
	anchor.xpm paragraph.xpm \
	br.xpm hr.xpm image.xpm \
	nbsp.xpm help.xpm \
	font_sub.xpm font_sup.xpm \
	font_minus.xpm font_plus.xpm \
	font_base.xpm font_pre.xpm \
	font_em.xpm font_kbd.xpm \
	font_tt.xpm \
	list_ol.xpm list_ul.xpm \
	list_li.xpm list_menu.xpm \
	list_dir.xpm list_dd.xpm \
	list_dl.xpm list_dt.xpm \
	form_form.xpm form_chkbtn.xpm form_rdbtn.xpm \
	form_options.xpm form_entry.xpm form_text.xpm \
	table_table.xpm table_tr.xpm \
	table_th.xpm table_td.xpm

pixmapdir = $(datadir)/pixmaps/peacock

pixmap_DATA = $(EXTRA_DIST)
