# Install the help files.
figs = \
  figures/peacock-file-browser.png \
  figures/peacock-gtkhtml-preview.png \
  figures/peacock-insert-img-tag-dialog.png \
  figures/peacock-html-toolbars.png \
  figures/peacock-prefs-dialog.png

docname = peacock
lang = C
omffile = peacock-C.omf
sgml_ents = \
	fdl.sgml \
	license.sgml

include $(top_srcdir)/doc/sgmldocs.make

dist-hook: app-dist-hook
